# Health-Reporting-Agent

./: .env.example  README.md  app.py  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  analyzer.py  llm.py  ppt_generator.py  rag_engine.py  report_generator.py  utils.py
methodology/: RAG_Methodology.md
output/: monthly_report.pptx  monthly_summary.txt  weekly_report_A.md  weekly_report_A.txt  weekly_report_B.md  weekly_report_B.txt
